@@ -1,4 +1,5 @@
 0.8.1:
+  - Examples for enhanced campaigns.
 
 0.8.0:
   - Removed deprecated API versions v201109, v201109_1.
